# MZBackup

./: .gitignore  Cargo.toml  Pipfile  README.md  backupZimbra.py  comando.py  cos.py  cratf.py  fichero.prueba  hilador.py  hilos.py  listado.py  listado_usuarios_zimbra.lst  listas.py  mailbox.py  mailbox_local.py  mailbox_prueba.py  main.py  modelado.py  normalizacion.sh  parser.py  prueba.py  prueba_backup.sh  prueba_usuario.py  pylama.ini  recolector.py  remoto.py  setup.py  tiempo.py  usuarios.py  verifica_cos.py
MZBackup/: recolector.py
MZBackup/parseros/: comun.py  cos.py  listas.py  usuarios.py
MZBackup/utils/: registro.py
herramientas/: verifica_cos.py
modulos/: .cosidear.py.swp  .utilidades.py.swp  backupeador.py  configuracion.py  cosidear.py  ldistribuidor.py  listado.py  modelado.py  remoto.py  usuareador.py  utilidades.py
mzbackup/: cli.py  instrumentos.py  mock.py  prueba.py
mzbackup/hilos/: respaldo.py
mzbackup/parseros/: comun.py  cos.py  ejecutante.py  iterador.py  iterante.py  listas.py  parser.py  placebo.py  recolector.py  usuarios.py
mzbackup/utils/: comandos.py  europa.py  pato.py  registro.py  rutas.py
pruebas/: configuracion.py  mzbackup.ini  prueba_mailbox.py  prueba_usuario.py
remoto/: cli.py
src/: error.rs  lib.rs  main.rs  remoto.rs
tests/data/: lista.cmd  lista.data  usuario.cmd  usuario.data
tests/instrumentos/: test_base.py  test_enviar_remoto.py
tests/mock/: open.py
tests/parseros/: test_comun.py  test_cos_europa.py  test_cos_parser.py  test_cos_recolector.py  test_lista_iterador.py  test_lista_parser.py  (+5 more)
(+29 files in other folders)
