[package]
name = "mzbackup"
version = "0.1.0"
authors = ["Alexander Ortiz <vtacius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mzbackup"
crate-type = ["cdylib"]

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
pyo3 = { version = "0.10.1"}
ssh2 = "0.8"
shellexpand = "2.0.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
